force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/LLC_BI__Budget_Line_Item__c.object-meta.xml
<CustomObject>
    <description>The individual line items that make up the overall budget.</description>
    <label>Budget Line Item</label>
    <nameField>
        <displayFormat>CLA-BD-{0000000}</displayFormat>
        <label>Budget Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>