force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>The budget line item description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>