force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Order__c</fullName>
    <description>The budget line item display order.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>