force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Percent_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Budgeted__c</fullName>
    <description>--DEPRECATED-- The percent budgeted for this line item.</description>
    <label>-D Percent Budgeted</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>