force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Remaining_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Remaining_Disbursement__c</fullName>
    <description>The total amount of the budget that remains for a budget line item.</description>
    <formula>LLC_BI__Amount_Budgeted__c -  LLC_BI__Total_Disbursed_Amount__c -  LLC_BI__Pending_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>