force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>LLC_BI__Description__c</columns>
    <columns>LLC_BI__Amount_Budgeted__c</columns>
    <columns>LLC_BI__Budget__c</columns>
    <columns>LLC_BI__Notes__c</columns>
    <columns>LLC_BI__Percent_Budgeted__c</columns>
    <columns>LLC_BI__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>